Creador de tablas de bingo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
         <title>Bingo</title>
     </head>
     <body>
+        <h1>Hola</h1>
+        <form>
+            <label for="numberOfCards">Número de cartas:</label>
+            <input type="number" id="numberOfCards" name="numberOfCards" min="1" max="10">
+          
+            <button type="submit" id="formulario">Comenzar</button>
+        </form>
+        <div class="cards">
 
+        </div>
         <script src="javascript.js"></script>
     </body>
 </html>
