--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
-        <title>Bingo</title>
+        <title>Bingo Game</title>
     </head>
     <body>
-        <h1>Hola</h1>
+        <h1>Bingo Card Game</h1>
         <form>
             <label for="numberOfCards">Número de cartas:</label>
             <input type="number" id="numberOfCards" name="numberOfCards" min="1" max="10">
