Agregue el anunciador de numero, le agregue un boton de pause y stop. Hice el codigo y le agregue un estilo.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
           
             <button type="submit" id="formulario">Comenzar</button>
         </form>
+        <button id="pause-btn">Pause</button>
+        <button id="stop-btn">Stop</button>
         <div class="cards">
 
         </div>
+        <div class="number-announcer"></div>
         <script src="javascript.js"></script>
     </body>
 </html>
